2008-10-16  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/Makefile.am:
	Leave apexsink out of the states test.

2008-10-16  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	(gst_jitter_buffer_sink_parse_caps),
	(gst_rtp_jitter_buffer_flush_start),
	(gst_rtp_jitter_buffer_flush_stop), (gst_rtp_jitter_buffer_chain),
	(gst_rtp_jitter_buffer_loop):
	Fix problem with using the output seqnum counter to check for input
	seqnum discontinuities.
	Improve gap detection and recovery, reset and flush the jitterbuffer on
	seqnum restart. Fixes #556520.

	* gst/rtpmanager/rtpjitterbuffer.c: (rtp_jitter_buffer_insert):
	Fix wrong G_LIKELY.

2008-10-16  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Commit 0.10.8.2 pre-release bump, that actually went out in a
	tarball on 2008-10-11

2008-10-16  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpsession.c:
	(gst_rtp_session_event_send_rtcp_src), (create_send_rtcp_src):
	Install event handler on the rtcp_src pad, make LATENCY event return
	TRUE.

2008-10-16  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/mpegdemux/gstmpegdemux.c: (gst_flups_demux_send_data):
	Make sure the mpegpsdemux element creates valid newsegment events.
	Fixes #556428

2008-10-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Sebastian Pölsterl
	
	* gst/mpegdemux/mpegtspacketizer.c:
	Fixes segfault in get_encoding_and_convert.
	Fixes #556482

2008-10-15  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Josep Torra

	* gst/mpegdemux/gstmpegtsdemux.c:
	Fixes a segfault in the adaptation buffer size strategy.
	Fixes #556440

2008-10-15  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/selector/gstinputselector.c: (gst_input_selector_event),
	(gst_input_selector_query):
	Gracefully handle the cases when we dont' have otherpad.
	Fixes #556430

2008-10-14  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/aiffparse/aiffparse.c: (plugin_init):