@@ -1,3 +1,11 @@
+2008-10-16  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* gst/flv/gstflvmux.c: (gst_flv_mux_audio_pad_setcaps),
+	(gst_flv_mux_write_buffer):
+	Don't set video_codec to the value that actually should go
+	into audio codec, otherwise we create invalid files.
+	Fixes bug #556564.
+
 2008-10-16  Jan Schmidt  <jan.schmidt@sun.com>
 
 	* tests/check/Makefile.am:
